[package]
name = "CyberGrape"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "cg"

[[bin]]
name = "monitor"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11.1"
clap = { version = "4.4.8", features = ["derive"] }
crossterm = "0.27.0"
env_logger = "0.11.3"
hound = "3.5.1"
libc = "0.2.150"
log = "0.4.21"
rand = "0.8.5"
ratatui = "0.24.0"
rayon = "1.8.0"
serde = { version = "1.0.190", features = ["derive"] }
slint = "1.3.0"
tokio = "1.34.0"

[build-dependencies]
bindgen = "0.69.1"
cmake = "0.1.50"
