[package]
name = "CyberGrape"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "cybergrape"
license = "MPL"
license-file = "LICENSE"

[lib]
name = "cybergrape"

[[bin]]
name = "monitor"

[[bin]]
name = "cybergrape"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
crossterm = "0.27.0"
env_logger = "0.11.3"
hound = "3.5.1"
libc = "0.2.150"
log = "0.4.21"
nom = "7.1.3"
rand = "0.8.5"
ratatui = "0.26.1"
ron = "0.8.1"
serde = { version = "1.0.190", features = ["derive"] }
serial2 = "0.2.20"
spin_sleep = "1.2.0"

[dev-dependencies]
tempfile = "3.10.0"

[build-dependencies]
bindgen = "0.69.1"
cmake = "0.1.50"
